Source/WebCore/plugins/PluginViewBase.h
@@ -75,6 +75,8 @@ public:
 
     virtual bool shouldAlwaysAutoStart() const { return false; }
 
+    virtual bool shouldAllowNavigationFromDrags() const { return false; }
+
 protected:
     explicit PluginViewBase(PlatformWidget widget = 0) : Widget(widget) { }
     
