Source/WebKit2/WebProcess/Plugins/PluginView.h
@@ -138,6 +138,7 @@ private:
     virtual WebCore::Scrollbar* verticalScrollbar();
     virtual bool wantsWheelEvents();
     virtual bool shouldAlwaysAutoStart() const OVERRIDE;
+    virtual bool shouldAllowNavigationFromDrags() const OVERRIDE;
 
     // WebCore::Widget
     virtual void setFrameRect(const WebCore::IntRect&);
